syntax = "proto3";

package user;
option go_package = "github.com/linhlc888/sample/src/proto/gateway/user;userpb";

import "google/api/annotations.proto";

// This is the list of proto provided by protobuf
// Use the one that you want
// import "google/protobuf/empty.proto";
// import "google/protobuf/struct.proto";
// import "google/protobuf/duration.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/wrappers.proto";

// Uncomment this line if you're using validator
// import "validator.proto";
// Format: type Name = 1 [(validator.field) = {int_gt: 0, int_lt: 100}];
// List of validators:
//   Message: msg_exists, human_error
//   String: regex, string_not_empty, length_eq, length_gt, length_lt
// 	 Int: int_gt, int_lt
// 	 Float, Double: float_gt, float_lt, float_epsilon, float_gte, float_lte
//   Repeated: repeated_count_min, repeated_count_max
//   Bytes: length_eq, length_gt, length_lt

// Sample service
service UserService {

  rpc Login(LoginRequest) returns (Response) {
    option (google.api.http) = {
      post : "/v1/user/login"
      body : "*"
    };
  }

  rpc Register(RegisterRequest) returns (Response) {
    option (google.api.http) = {
      post : "/v1/user/register"
      body : "*"
    };
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string fullname = 2;
  string password = 3;
}

message Response {
  int32 error = 1;
  string message = 2;
}
